--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>jenklin</title>
   </head>
   <body>
     <p> <strong>Members<strong> get exclusive access to data, recommendations, best practices and curated content  <p>
