--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
     <title>jenklin</title>
   </head>
   <body>
-    <p> <strong>Members<strong> get exclusive access to data, recommendations, best practices and curated content  <p>
+    <p> <strong>Qualified members</strong> get exclusive access to data, recommendations, best practices and curated content  <p>
 </html>
